Added RabbitMQ configurations to create a queues on the broker messages, when user send the messages by telegram

--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8084
 
 bot.name=babushkin_pogreb_test_bot
 bot.token=5613123114:AAHHcoMhzlsCLID2vynjh8nfjYjmTbQtaas
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=userok
+spring.rabbitmq.password=p@ssw0rd
