--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/pogreb
 spring.datasource.username=userok
 spring.datasource.password=p@ssw0rd
 spring.jpa.generate-ddl=true
+
+token=5613123114:AAHHcoMhzlsCLID2vynjh8nfjYjmTbQtaas
+service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
