--- a/rest-service/pom.xml
+++ b/rest-service/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.amirkenesbay</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
